# my_dagster_project

my_dagster_project/: .env.example  .gitignore  DAGSTER_PLUS_READY.md  Dockerfile  README.md  dagster_cloud.yaml  definitions.py  pyproject.toml
my_dagster_project/.github/workflows/: deploy.yml
my_dagster_project/dbt_project/: .user.yml
my_dagster_project/dbt_project/models/staging/: stg_orders.sql
my_dagster_project/my_dagster_project/: assets.py  definitions.py
my_dagster_project/my_dagster_project/dbt_project/: dbt_project.yml  profiles.yml
my_dagster_project/my_dagster_project/dbt_project/models/marts/: customer_summary.sql
my_dagster_project/my_dagster_project/dbt_project/models/staging/: stg_customers.sql
