[project]
name = "my_dagster_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-snowflake",
    "dagster-dbt",
    "dbt-core",
    "dbt-snowflake",
    "pandas",
    "snowflake-connector-python[pandas]",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "my_dagster_project.definitions"
code_location_name = "my_dagster_project"

[tool.setuptools.packages.find]
exclude=["my_dagster_project_tests"]
